[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Road.png" type="Texture" id=1]
[ext_resource path="res://victory.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Singleplayer Mode/Singleplayer.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Singleplayer Mode/PlayerSingleplayer.gd" type="Script" id=5]
[ext_resource path="res://Themes/alterebro-pixel-font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=7]
[ext_resource path="res://Themes/selected_button.tres" type="StyleBox" id=8]
[ext_resource path="res://Themes/non_selected_button.tres" type="StyleBox" id=9]
[ext_resource path="res://Themes/pressed_button.tres" type="StyleBox" id=10]
[ext_resource path="res://Themes/hovered_button.tres" type="StyleBox" id=11]
[ext_resource path="res://Soundtrack/ideiagalinha2.ogg" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 125
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 6 )

[node name="Singleplayer" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.754, 0.354 )
texture = ExtResource( 1 )
centered = false

[node name="victory" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 72 )

[node name="Player" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 650, 700 )
script = ExtResource( 5 )

[node name="Timer_Fast_Road" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.3
autostart = true

[node name="Timer_Slow_Road" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.5
autostart = true

[node name="Health" type="Label" parent="."]
margin_left = 890.0
margin_top = -8.0
margin_right = 1183.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Lives Left: 5"

[node name="GameOver" type="Label" parent="."]
margin_left = 168.0
margin_top = 184.0
margin_right = 1048.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0705882, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scoreboard" type="Label" parent="CanvasLayer"]
margin_left = 612.0
margin_top = -6.0
margin_right = 631.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="RestartButton" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 448.0
margin_top = 312.0
margin_right = 768.0
margin_bottom = 376.0
focus_neighbour_top = NodePath("../BMenuButton")
focus_neighbour_bottom = NodePath("../BMenuButton")
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
text = "Restart"

[node name="BMenuButton" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 448.0
margin_top = 392.0
margin_right = 768.0
margin_bottom = 456.0
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../RestartButton")
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
text = "Back to Menu"

[node name="Menu_Button" type="Button" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 184.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
text = "Menu"

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
stream_paused = true

[connection signal="rip" from="." to="Player" method="_on_Singleplayer_rip"]
[connection signal="damage" from="Player" to="." method="_on_Player_damage"]
[connection signal="scored" from="Player" to="." method="_on_Player_scored"]
[connection signal="timeout" from="Timer_Fast_Road" to="." method="_on_Timer_Fast_Road_timeout"]
[connection signal="timeout" from="Timer_Slow_Road" to="." method="_on_Timer_Slow_Road_timeout"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/BMenuButton" to="." method="_on_BMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu_Button" to="CanvasLayer/Pause" method="_on_Menu_Button_pressed"]
